# dacquiri

./: Cargo.toml  LICENSE  README.md
dacquiri/: Cargo.toml
dacquiri/examples/bank/: main.rs  prepare_demo.rs
dacquiri/examples/bank/bank/: attributes.rs  error.rs  mod.rs  models.rs  policies.rs
dacquiri/examples/simple/: attributes.rs  entitlements.rs  error.rs  grants.rs  main.rs  models.rs  policies.rs  principal.rs
dacquiri/src/: attribute.rs  attribute_chain.rs  chain.rs  constraint.rs  error.rs  grant.rs  grant_chain.rs  has.rs  lib.rs  prelude.rs  principal.rs  private.rs  resource.rs  store.rs  subject.rs
dacquiri/src/acquire/: acquire.rs  acquire_default.rs  acquire_with_context.rs  acquire_with_resource.rs  acquire_with_resource_and_context.rs  mod.rs
dacquiri/src/attributes/: attribute.rs  grantable.rs  grantable_with_context.rs  grantable_with_resource.rs  grantable_with_resource_and_context.rs  has_attribute.rs  mod.rs
dacquiri/src/grants/: grant.rs  grantable.rs  grantable_with_context.rs  grantable_with_resource.rs  grantable_with_resource_and_context.rs  has_grant.rs  mod.rs
dacquiri/tests/: mod.rs
dacquiri/tests/ui/: fail_elided_implicit_permission.rs  fail_missing_check_simple.rs  fail_missing_one_of_two_permissions.rs  mod.rs  pass_simple_check.rs  pass_two_permissions.rs
dacquiri/tests/ui/fail/: simple.rs  simple.stderr  simple_guarded_function.rs  simple_guarded_function.stderr
dacquiri/tests/ui/pass/: inherited_policy_explicit.rs  inherited_policy_implicit.rs  multistep_prove_impl_trait.rs  multistep_prove_impl_trait_implicit.rs  simple.rs  simple_guarded_function.rs
dacquiri_derive/: .gitignore  Cargo.toml
dacquiri_derive/src/: lib.rs  utils.rs
dacquiri_derive/src/attribute/: builder.rs  mod.rs
dacquiri_derive/src/attribute/parser/: attribute_fn.rs  mod.rs
dacquiri_derive/src/entitlement/: builder.rs  mod.rs  parser.rs
dacquiri_derive/src/grant/: builder.rs  mod.rs
dacquiri_derive/src/policy/: builder.rs  entity_set.rs  mod.rs  parser.rs
dacquiri_derive/src/policy/builder/: branch.rs  builder.rs  clause.rs  context.rs  guard.rs  mod.rs
dacquiri_derive/src/policy/parser/: branch.rs  context.rs  entities.rs  guard.rs  mod.rs  policy.rs
dacquiri_derive/src/policy/parser/clauses/: clause.rs  constraint.rs  dependent_policy.rs  mod.rs
dacquiri_derive/src/principal/: builder.rs  mod.rs
dacquiri_derive/src/requirement/: builder.rs  mod.rs
dacquiri_derive/src/subject/: builder.rs  mod.rs
src/: grant.rs  lib.rs  prelude.rs
src/tests/: helpers.rs  mod.rs
tests/: mod.rs
tests/ui/: fail_elided_implicit_permission.rs  fail_missing_check_simple.rs  fail_missing_one_of_two_permissions.rs  mod.rs  pass_simple_check.rs  pass_two_permissions.rs
