[package]
name = "dacquiri"
version = "0.2.2"
edition = "2021"
authors = ["d0nut <d0nut@resync.gg>"]
description = "A compile-time enforcing DAC authorization library."
repository = "https://github.com/resyncgg/dacquiri"
license = "MIT"
readme = "README.md"
homepage = "https://resync.gg"
keywords = ["authorization", "dac", "access", "authz", "security"]
categories = ["authentication"]

[features]
default = ["derive"]
derive = ["dacquiri_derive"]

[dependencies]
thiserror = "1"
async-trait = "0"
dacquiri_derive = { version = "0.2.2", optional = true, path = "../dacquiri_derive" }

[dev-dependencies]
trybuild = "1"
dacquiri_derive = { path = "../dacquiri_derive" }

[[example]]
name = "simple"