[package]
name = "dacquiri"
version = "0.4.4"
edition = "2021"
authors = ["d0nut <d0nut@resync.gg>"]
description = "An authorization framework with compile-time enforcement."
repository = "https://github.com/resyncgg/dacquiri"
license = "MIT"
readme = "README.md"
homepage = "https://resync.gg"
keywords = ["authorization", "abac", "access", "authz", "security"]
categories = ["authentication"]

[features]
default = ["derive"]
derive = ["dacquiri_derive"]

[dependencies]
thiserror = "1"
async-trait = "0"
fxhash = "0"
dacquiri_derive = { version = "0.4", optional = true, path = "../dacquiri_derive" }

[dev-dependencies]
trybuild = "1"
paste = "1"
parking_lot = "0"
async-trait = "0"
rand = "0"
dacquiri_derive = { path = "../dacquiri_derive" }

[[example]]
name = "simple"

[[example]]
name = "bank"
