[package]
name = "dacquiri_derive"
version = "0.4.4"
edition = "2021"
description = "Derive macro support for dacquiri"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dacquiri_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
thiserror = "1"
syn = { version = "1", features = ["full"] }
